[package]
name            = "repolocli"
version         = "0.1.0"
authors         = ["Matthias Beyer <matthias.beyer@atos.net>"]
edition         = "2018"
description     = "CLI for repology.org"
documentation   = "https://docs.rs/repolocli"
repository      = "https://git.beyermatthi.as/repolocli"
readme          = "./README.md"
keywords        = ["cli", "repology"]
categories      = ["command-line-interface", "command-line-utilities"]
license         = "GPL-2.0-only"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
librepology     = { version = "0.1.0", path = "./librepology" }
anyhow          = "1"
serde           = "1"
serde_derive    = "1"
serde_json      = "1"
toml            = "0.5"
url             = { version = "2.5", features = ["serde"] }
xdg             = "3"
log             = "0.4"
flexi_logger    = "0.31"
prettytable-rs  = "0.10"
filters         = "0.4"
boolinator      = "2"
itertools       = "0.14"
semver          = "1"

[dependencies.clap]
version             = "4"
features            = [ "suggestions", "color", "wrap_help" ]

[dependencies.csv]
version  = "1"
optional = true

[features]
default     = ["compare_csv"]
compare_csv = ["csv"]

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 16
panic            = 'unwind'
incremental      = false
overflow-checks  = false

