[package]
name            = "librepology"
version         = "0.1.0"
authors         = ["Matthias Beyer <matthias.beyer@atos.net>"]
edition         = "2018"
description     = "Library for repology.org API access"
documentation   = "https://docs.rs/librepology"
repository      = "https://git.beyermatthi.as/repolocli"
readme          = "./README.md"
keywords        = ["api", "repology"]
categories      = ["data-structures", "api-bindings"]
license         = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde           = "1"
serde_derive    = "1"
serde_json      = "1"
url             = "1.7"
url_serde       = "0.2"
thiserror       = "1"
log             = "0.4"
derive_more     = "0.14"
derive-new      = "0.5"
curl            = "0.4"

